[gd_scene load_steps=6 format=3 uid="uid://4qurwmwm1hfv"]

[ext_resource type="Script" uid="uid://f24uw2ypexxv" path="res://ui/scores/ScoresUI.gd" id="1_13si5"]
[ext_resource type="PackedScene" uid="uid://b6jtlsv3r0mb3" path="res://ui/scores/ScoreLine.tscn" id="2_5whno"]
[ext_resource type="PackedScene" uid="uid://bdq6taskmt5de" path="res://ui/scores/SumLine.tscn" id="3_rvl16"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_13si5"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="LabelSettings" id="LabelSettings_rvl16"]
font_size = 30

[node name="ScoresUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_13si5")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 35.0
offset_top = 4.0
offset_right = 1241.0
offset_bottom = 528.0
theme_override_styles/panel = SubResource("StyleBoxFlat_13si5")

[node name="Container" type="VBoxContainer" parent="Panel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -17.0
offset_top = 3.0
offset_right = 755.0
offset_bottom = 996.0

[node name="Headers" type="Panel" parent="Panel/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HeadersLine" type="HBoxContainer" parent="Panel/Container/Headers"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.963
offset_left = 16.0
offset_top = -12.0
offset_right = -12.0
offset_bottom = 7.851

[node name="EmptyLabel" type="Label" parent="Panel/Container/Headers/HeadersLine"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
vertical_alignment = 1

[node name="HeaderA" type="Label" parent="Panel/Container/Headers/HeadersLine"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 1
text = "↓"
label_settings = SubResource("LabelSettings_rvl16")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="HeaderB" type="Label" parent="Panel/Container/Headers/HeadersLine"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 1
text = "↕"
label_settings = SubResource("LabelSettings_rvl16")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="HeaderC" type="Label" parent="Panel/Container/Headers/HeadersLine"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 1
text = "↑"
label_settings = SubResource("LabelSettings_rvl16")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="1" parent="Panel/Container" instance=ExtResource("2_5whno")]
layout_mode = 2

[node name="2" parent="Panel/Container" instance=ExtResource("2_5whno")]
layout_mode = 2
figure = 1

[node name="3" parent="Panel/Container" instance=ExtResource("2_5whno")]
layout_mode = 2
figure = 2

[node name="4" parent="Panel/Container" instance=ExtResource("2_5whno")]
layout_mode = 2
figure = 3

[node name="5" parent="Panel/Container" instance=ExtResource("2_5whno")]
layout_mode = 2
figure = 4

[node name="6" parent="Panel/Container" instance=ExtResource("2_5whno")]
layout_mode = 2
figure = 5

[node name="NumbersBonus" parent="Panel/Container" instance=ExtResource("3_rvl16")]
layout_mode = 2
label = "BONUS"

[node name="NumbersSum" parent="Panel/Container" instance=ExtResource("3_rvl16")]
layout_mode = 2
label = "TOTAL (chiffres)"
category = 1

[node name="Brelan" parent="Panel/Container" instance=ExtResource("2_5whno")]
layout_mode = 2
figure = 6

[node name="Carré" parent="Panel/Container" instance=ExtResource("2_5whno")]
layout_mode = 2
figure = 7

[node name="Full" parent="Panel/Container" instance=ExtResource("2_5whno")]
layout_mode = 2
figure = 8

[node name="Petite Suite" parent="Panel/Container" instance=ExtResource("2_5whno")]
layout_mode = 2
figure = 9

[node name="Grande suite" parent="Panel/Container" instance=ExtResource("2_5whno")]
layout_mode = 2
figure = 10

[node name="Yams" parent="Panel/Container" instance=ExtResource("2_5whno")]
layout_mode = 2
figure = 11

[node name="Chance" parent="Panel/Container" instance=ExtResource("2_5whno")]
layout_mode = 2
figure = 12

[node name="FiguresSum" parent="Panel/Container" instance=ExtResource("3_rvl16")]
layout_mode = 2
label = "TOTAL (figures)"
category = 2

[node name="TotalSum" parent="Panel/Container" instance=ExtResource("3_rvl16")]
layout_mode = 2
category = 3

[node name="TotalScore" type="Panel" parent="Panel/Container"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/Container/TotalScore"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.996
anchor_bottom = 0.959
offset_right = -16.912
offset_bottom = 0.910995

[node name="EmptyLabel" type="Label" parent="Panel/Container/TotalScore/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="TotalScoreLabel" type="Label" parent="Panel/Container/TotalScore/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "999"

[connection signal="mouse_entered" from="Panel/Container/Headers/HeadersLine" to="Panel/Container/Headers/HeadersLine" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Panel/Container/Headers/HeadersLine" to="Panel/Container/Headers/HeadersLine" method="_on_mouse_exited"]
